--- a/index.html
+++ b/index.html
@@ -4,32 +4,25 @@
   <meta charset="UTF-8">
   <title>Dispatch Simulator: Czechia</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f3f3f3;
-      color: #333;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: #d62828;
-    }
-    .box {
-      background: white;
-      padding: 20px;
-      max-width: 600px;
-      margin: 0 auto;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    }
+    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
+    nav { background: #d62828; padding: 15px; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    .content { padding: 50px; }
+    h1 { font-size: 2.5em; margin-bottom: 10px; }
   </style>
 </head>
 <body>
-  <div class="box">
+  <nav>
+    <a href="index.html">Domů</a>
+    <a href="about.html">O hře</a>
+    <a href="development.html">Vývoj</a>
+    <a href="download.html">Ke stažení</a>
+    <a href="contact.html">Kontakt</a>
+    <a href="links.html">Odkazy</a>
+  </nav>
+  <div class="content">
     <h1>Dispatch Simulator: Czechia</h1>
-    <p>Vítej na oficiální stránce české hry o tísňových složkách.</p>
-    <p>Hra je ve vývoji – sleduj vývoj a další novinky brzy!</p>
-    <p>Kontakt: studio112interactive@outlook.com</p>
+    <p><strong>Coming soon...</strong></p>
   </div>
 </body>
 </html>
