--- a/development.html
+++ b/development.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <title>Vývoj | Dispatch Simulator: Czechia</title>
+  <style>
+    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
+    nav { background: #d62828; padding: 15px; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    .content { padding: 50px; max-width: 800px; margin: auto; text-align: left; }
+    h1 { text-align: center; }
+  </style>
+</head>
+<body>
+  <nav>
+    <a href="index.html">Domů</a>
+    <a href="about.html">O hře</a>
+    <a href="development.html">Vývoj</a>
+    <a href="download.html">Ke stažení</a>
+    <a href="contact.html">Kontakt</a>
+    <a href="links.html">Odkazy</a>
+  </nav>
+  <div class="content">
+    <h1>Vývoj hry</h1>
+    <p>Projekt byl zahájen v roce 2025 jako nezávislá hra inspirovaná českým prostředím a reálnými složkami IZS.</p>
+
+    <h3>Co už je hotové:</h3>
+    <ul>
+      <li>Základní nápad a plán hry</li>
+      <li>Oficiální web spuštěn</li>
+      <li>Příprava prostředí pro vývoj v Unity</li>
+    </ul>
+
+    <h3>Co se chystá:</h3>
+    <ul>
+      <li>Hratelný prototyp</li>
+      <li>Implementace mapy a jednotek</li>
+      <li>Simulace výjezdů a tísňového volání</li>
+    </ul>
+
+    <p><em>Stránka bude průběžně aktualizována s dalšími novinkami.</em></p>
+  </div>
+</body>
+</html>
 
