--- a/links.html
+++ b/links.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <title>Odkazy | Dispatch Simulator: Czechia</title>
+  <style>
+    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
+    nav { background: #d62828; padding: 15px; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    .content { padding: 50px; max-width: 800px; margin: auto; }
+    h1 { font-size: 2.2em; margin-bottom: 10px; }
+  </style>
+</head>
+<body>
+  <nav>
+    <a href="index.html">Domů</a>
+    <a href="about.html">O hře</a>
+    <a href="development.html">Vývoj</a>
+    <a href="download.html">Ke stažení</a>
+    <a href="contact.html">Kontakt</a>
+    <a href="links.html">Odkazy</a>
+  </nav>
+  <div class="content">
+    <h1>Odkazy</h1>
+    <p><strong>Coming soon...</strong></p>
+  </div>
+</body>
+</html>
 
