--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
     nav { background: #d62828; padding: 15px; }
     nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; max-width: 800px; margin: auto; }
-    h1 { font-size: 2.2em; margin-bottom: 10px; }
+    .content { padding: 50px; max-width: 800px; margin: auto; text-align: left; }
+    h1 { font-size: 2.2em; margin-bottom: 10px; text-align: center; }
   </style>
 </head>
 <body>
@@ -22,9 +22,20 @@
   </nav>
   <div class="content">
     <h1>O hře</h1>
-    <p><strong>Dispatch Simulator: Czechia</strong> je česká hra zaměřená na řízení tísňových složek – hasičů, záchranné služby a policie. Cílem je vytvořit realistickou simulaci operačního střediska v prostředí České republiky.</p>
-    <p>Hra je v rané fázi vývoje. Více informací bude doplněno později.</p>
+    <p><strong>Dispatch Simulator: Czechia</strong> je real-time simulační hra, ve které se vžiješ do role operátora tísňové linky 112. 
+    Pod tvé velení spadají všechny složky integrovaného záchranného systému – Hasičský záchranný sbor, Zdravotnická záchranná služba, Policie ČR, 
+    ale i další specializované jednotky, jako je horská služba.</p>
+
+    <p>Hráč staví stanice, pořizuje techniku, najímá personál a stará se o jejich výcvik. Na základě rozmístění jednotek se generují náhodné události, 
+    na které je potřeba co nejefektivněji reagovat.</p>
+
+    <p>Každý zásah začíná realistickým chatem s volajícím. Ten popisuje situaci a hráč na základě informací rozhoduje, jaké jednotky vyslat. 
+    Odpovědi volajícího řídí AI, která reaguje na hráčovy otázky a rozhodnutí. Vyslané složky jsou následně vyhodnoceny – pokud je nasazení neadekvátní, 
+    situace se může vyvinout dramaticky.</p>
+
+    <p>Cílem hry je efektivně zvládat krizové situace, optimalizovat pokrytí území, správně nasazovat prostředky a vést záchranné operace co nejlépe.</p>
+
+    <p><em>Hra je aktuálně ve vývoji. Více informací brzy!</em></p>
   </div>
 </body>
 </html>
-
