--- a/about.html
+++ b/about.html
@@ -22,20 +22,20 @@
   </nav>
   <div class="content">
     <h1>O hře</h1>
-    <p><strong>Dispatch Simulator: Czechia</strong> je real-time simulační hra, ve které se vžiješ do role operátora tísňové linky 112. 
-    Pod tvé velení spadají všechny složky integrovaného záchranného systému – Hasičský záchranný sbor, Zdravotnická záchranná služba, Policie ČR, 
-    ale i další specializované jednotky, jako je horská služba.</p>
+    <p><strong>Dispatch Simulator: Czechia</strong> bude real-time simulační hra, ve které se hráč ujme role operátora tísňové linky 112. 
+    V rámci své funkce bude řídit a koordinovat všechny složky integrovaného záchranného systému – Hasičský záchranný sbor, Zdravotnickou záchrannou službu, Policii ČR a další specializované jednotky jako např. horskou službu.</p>
 
-    <p>Hráč staví stanice, pořizuje techniku, najímá personál a stará se o jejich výcvik. Na základě rozmístění jednotek se generují náhodné události, 
-    na které je potřeba co nejefektivněji reagovat.</p>
+    <p>Hráč bude budovat stanice, pořizovat zásahová vozidla, najímat a školit personál. Rozmístění jednotek na mapě ovlivní typy a četnost událostí, které budou generovány náhodně v reálném čase.</p>
 
-    <p>Každý zásah začíná realistickým chatem s volajícím. Ten popisuje situaci a hráč na základě informací rozhoduje, jaké jednotky vyslat. 
-    Odpovědi volajícího řídí AI, která reaguje na hráčovy otázky a rozhodnutí. Vyslané složky jsou následně vyhodnoceny – pokud je nasazení neadekvátní, 
-    situace se může vyvinout dramaticky.</p>
+    <p>Každá událost bude začínat simulovaným telefonátem – formou textového chatu. Volající popíše situaci, na kterou hráč bude moci reagovat vlastními otázkami a rozhodnutími. Odpovědi volajícího bude řídit AI, která se přizpůsobí stylu komunikace a vyhodnotí závažnost situace.</p>
 
-    <p>Cílem hry je efektivně zvládat krizové situace, optimalizovat pokrytí území, správně nasazovat prostředky a vést záchranné operace co nejlépe.</p>
+    <p>Po rozhodnutí operátora dojde k výjezdu jednotek na místo zásahu. Systém AI následně posoudí, zda bylo nasazení odpovídající – pokud například hráč vyšle málo policistů nebo špatně vybavenou posádku, situace se může zkomplikovat, například napadením jednotek nebo dalšími zraněními. Zkušenost a výcvik personálu budou klíčové pro úspěšné zvládnutí zásahů.</p>
 
-    <p><em>Hra je aktuálně ve vývoji. Více informací brzy!</em></p>
+    <p>Hra nabídne možnost zrychlit čas, když je klid, a zpomalit ho během kritických momentů. Dlouhodobým cílem bude budování efektivní záchranné sítě a zvládání co největšího počtu incidentů v co nejkratším čase s minimálními následky.</p>
+
+    <p><em>Tento popis představuje předběžný návrh herních mechanismů. Hra je v rané fázi vývoje a veškeré funkce, rozhraní i hratelnost se mohou v budoucnu měnit a vyvíjet.</em></p>
+
+    <p><em>Více informací přineseme postupně v dalších fázích vývoje. Sledujte sekci Vývoj pro aktuální novinky!</em></p>
   </div>
 </body>
 </html>
