--- a/development.html
+++ b/development.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <title>Vývoj | Dispatch Simulator: Czechia</title>
   <style>
-    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
-    nav { background: #d62828; padding: 15px; }
+    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; }
+    nav { background: #d62828; padding: 15px; text-align: center; }
     nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; max-width: 800px; margin: auto; text-align: left; }
-    h1 { text-align: center; }
+    .content { padding: 50px; max-width: 800px; margin: auto; }
+    h1 { font-size: 2.2em; margin-bottom: 10px; text-align: center; }
+    .version-block { background: white; padding: 20px; margin-bottom: 30px; border-left: 5px solid #d62828; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    .version-block h2 { margin-top: 0; }
+    .version-status { font-style: italic; color: #555; }
   </style>
 </head>
 <body>
@@ -21,25 +24,22 @@
     <a href="links.html">Odkazy</a>
   </nav>
   <div class="content">
-    <h1>Vývoj hry</h1>
-    <p>Projekt byl zahájen v roce 2025 jako nezávislá hra inspirovaná českým prostředím a reálnými složkami IZS.</p>
+    <h1>Vývoj</h1>
 
-    <h3>Co už je hotové:</h3>
-    <ul>
-      <li>Základní nápad a plán hry</li>
-      <li>Oficiální web spuštěn</li>
-      <li>Příprava prostředí pro vývoj v Unity</li>
-    </ul>
+    <div class="version-block">
+      <h2>Verze 0.0</h2>
+      <p class="version-status">Stav: Vývojová fáze (zatím není ke stažení)</p>
+      <p><strong>Co je nového:</strong></p>
+      <ul>
+        <li>Zahájení vývoje hry</li>
+        <li>Vytvoření návrhu základních herních mechanik</li>
+        <li>Založení oficiální webové stránky projektu</li>
+        <li>Přidání sekcí: Domů, O hře, Vývoj, Ke stažení, Kontakt, Odkazy</li>
+      </ul>
+    </div>
 
-    <h3>Co se chystá:</h3>
-    <ul>
-      <li>Hratelný prototyp</li>
-      <li>Implementace mapy a jednotek</li>
-      <li>Simulace výjezdů a tísňového volání</li>
-    </ul>
-
-    <p><em>Stránka bude průběžně aktualizována s dalšími novinkami.</em></p>
+    <!-- Sem později můžeš přidávat další verze podobně jako výše -->
+    
   </div>
 </body>
 </html>
-
