--- a/index.html
+++ b/index.html
@@ -2,13 +2,29 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Dispatch Simulator: Czechia</title>
+  <title>Domů | Dispatch Simulator: Czechia</title>
   <style>
     body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
     nav { background: #d62828; padding: 15px; }
     nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; }
-    h1 { font-size: 2.5em; margin-bottom: 10px; }
+    .hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 80vh;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 3em;
+      color: #222;
+      margin-bottom: 10px;
+    }
+    h2 {
+      font-size: 1.5em;
+      color: #555;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -20,9 +36,9 @@
     <a href="contact.html">Kontakt</a>
     <a href="links.html">Odkazy</a>
   </nav>
-  <div class="content">
+  <div class="hero">
     <h1>Dispatch Simulator: Czechia</h1>
-    <p><strong>Coming soon...</strong></p>
+    <h2>Coming soon</h2>
   </div>
 </body>
 </html>
