--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,32 @@
   <meta charset="UTF-8">
   <title>Kontakt | Dispatch Simulator: Czechia</title>
   <style>
-    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
-    nav { background: #d62828; padding: 15px; }
+    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; }
+    nav { background: #d62828; padding: 15px; text-align: center; }
     nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; max-width: 800px; margin: auto; }
-    h1 { font-size: 2.2em; margin-bottom: 10px; }
-    p { font-size: 1.1em; }
+    .content { max-width: 800px; margin: auto; padding: 50px 20px; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-top: 30px; }
+    h1 { text-align: center; color: #222; }
+    p { text-align: center; color: #555; }
+    form { display: flex; flex-direction: column; gap: 15px; margin-top: 30px; }
+    input, textarea {
+      padding: 10px;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 100%;
+    }
+    button {
+      background: #d62828;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #a61f1f;
+    }
   </style>
 </head>
 <body>
@@ -21,11 +41,19 @@
     <a href="contact.html">Kontakt</a>
     <a href="links.html">Odkazy</a>
   </nav>
+
   <div class="content">
     <h1>Kontakt</h1>
-    <p>V případě dotazů nebo spolupráce mě můžeš kontaktovat na:</p>
-    <p><strong>studio112interactive@outlook.com</strong></p>
+    <p>Zde můžeš posílat své návrhy, nabídky na spolupráci a v budoucnu i hlášení chyb ze hry.</p>
+
+    <form method="POST" action="https://formspree.io/f/moqgnwdz"> <!-- změň URL až budeš mít svůj Formspree -->
+      <input type="text" name="name" placeholder="Tvé jméno" required>
+      <input type="email" name="email" placeholder="Tvůj e-mail" required>
+      <textarea name="message" rows="6" placeholder="Zpráva / návrh / bug / spolupráce" required></textarea>
+      <button type="submit">Odeslat</button>
+    </form>
+
+    <p>Nebo piš rovnou na e-mail: <strong>studio112interactive@outlook.com</strong></p>
   </div>
 </body>
 </html>
-
