--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <h1>Kontakt</h1>
     <p>Zde můžeš posílat své návrhy, nabídky na spolupráci a v budoucnu i hlášení chyb ze hry.</p>
 
-    <form method="POST" action="https://formspree.io/f/moqgnwdz"> <!-- změň URL až budeš mít svůj Formspree -->
+    <form method="POST" action="https://formspree.io/f/mpwpveoo"> <!-- změň URL až budeš mít svůj Formspree -->
       <input type="text" name="name" placeholder="Tvé jméno" required>
       <input type="email" name="email" placeholder="Tvůj e-mail" required>
       <textarea name="message" rows="6" placeholder="Zpráva / návrh / bug / spolupráce" required></textarea>
