--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </nav>
 
   <div class="container">
-    <img src="logo.png" alt="Logo Dispatch Simulator: Czechia" class="logo">
+    <img src="logo.png-removebg-preview.png" alt="Logo Dispatch Simulator: Czechia" class="logo">
 
     <h1>Dispatch Simulator: Czechia</h1>
 
