--- a/about.html
+++ b/about.html
@@ -4,11 +4,73 @@
   <meta charset="UTF-8">
   <title>O hře | Dispatch Simulator: Czechia</title>
   <style>
-    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
-    nav { background: #d62828; padding: 15px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; max-width: 800px; margin: auto; text-align: left; }
-    h1 { font-size: 2.2em; margin-bottom: 10px; text-align: center; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
+      color: #222;
+    }
+
+    nav {
+      background-color: #d62828;
+      padding: 15px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1em;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #ffd166;
+    }
+
+    .content {
+      background: white;
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      text-align: center;
+      color: #d62828;
+      font-size: 2.5em;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.1em;
+      line-height: 1.8;
+      margin-bottom: 20px;
+    }
+
+    em {
+      color: #555;
+    }
+
+    @media (max-width: 768px) {
+      .content {
+        padding: 20px;
+        margin: 20px;
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+
+      p {
+        font-size: 1em;
+      }
+    }
   </style>
 </head>
 <body>
@@ -20,6 +82,7 @@
     <a href="contact.html">Kontakt</a>
     <a href="links.html">Odkazy</a>
   </nav>
+
   <div class="content">
     <h1>O hře</h1>
     <p><strong>Dispatch Simulator: Czechia</strong> bude real-time simulační hra, ve které se hráč ujme role operátora tísňové linky 112. 
