--- a/development.html
+++ b/development.html
@@ -4,14 +4,94 @@
   <meta charset="UTF-8">
   <title>Vývoj | Dispatch Simulator: Czechia</title>
   <style>
-    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; }
-    nav { background: #d62828; padding: 15px; text-align: center; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; max-width: 800px; margin: auto; }
-    h1 { font-size: 2.2em; margin-bottom: 10px; text-align: center; }
-    .version-block { background: white; padding: 20px; margin-bottom: 30px; border-left: 5px solid #d62828; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .version-block h2 { margin-top: 0; }
-    .version-status { font-style: italic; color: #555; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
+      color: #222;
+    }
+
+    nav {
+      background-color: #d62828;
+      padding: 15px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1em;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #ffd166;
+    }
+
+    .content {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 40px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2.5em;
+      color: #d62828;
+      margin-bottom: 30px;
+    }
+
+    .version-block {
+      background: #fafafa;
+      padding: 25px;
+      border-left: 6px solid #d62828;
+      border-radius: 8px;
+      margin-bottom: 30px;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    .version-block h2 {
+      margin-top: 0;
+      font-size: 1.6em;
+      color: #333;
+    }
+
+    .version-status {
+      font-style: italic;
+      color: #777;
+      margin-bottom: 15px;
+      display: block;
+    }
+
+    ul {
+      padding-left: 20px;
+      line-height: 1.7;
+    }
+
+    li {
+      margin-bottom: 5px;
+    }
+
+    @media (max-width: 768px) {
+      .content {
+        padding: 20px;
+        margin: 20px;
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+
+      .version-block h2 {
+        font-size: 1.4em;
+      }
+    }
   </style>
 </head>
 <body>
@@ -23,12 +103,13 @@
     <a href="contact.html">Kontakt</a>
     <a href="links.html">Odkazy</a>
   </nav>
+
   <div class="content">
     <h1>Vývoj</h1>
 
     <div class="version-block">
       <h2>Verze 0.0</h2>
-      <p class="version-status">Stav: Vývojová fáze (zatím není ke stažení)</p>
+      <span class="version-status">Stav: Vývojová fáze (zatím není ke stažení)</span>
       <p><strong>Co je nového:</strong></p>
       <ul>
         <li>Zahájení vývoje hry</li>
@@ -38,8 +119,8 @@
       </ul>
     </div>
 
-    <!-- Sem později můžeš přidávat další verze podobně jako výše -->
-    
+    <!-- Další verze sem později přidáš ve stejném formátu -->
+
   </div>
 </body>
 </html>
