--- a/contact.html
+++ b/contact.html
@@ -4,31 +4,110 @@
   <meta charset="UTF-8">
   <title>Kontakt | Dispatch Simulator: Czechia</title>
   <style>
-    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; }
-    nav { background: #d62828; padding: 15px; text-align: center; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { max-width: 800px; margin: auto; padding: 50px 20px; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-top: 30px; }
-    h1 { text-align: center; color: #222; }
-    p { text-align: center; color: #555; }
-    form { display: flex; flex-direction: column; gap: 15px; margin-top: 30px; }
-    input, textarea {
-      padding: 10px;
-      font-size: 1em;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      width: 100%;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f3f3f3;
+      margin: 0;
+      padding: 0;
+      color: #222;
     }
+
+    nav {
+      background: #d62828;
+      padding: 15px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1em;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #ffd166;
+    }
+
+    .content {
+      max-width: 800px;
+      margin: 60px auto;
+      padding: 40px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2.4em;
+      color: #d62828;
+      margin-bottom: 10px;
+    }
+
+    p {
+      text-align: center;
+      color: #555;
+      font-size: 1.1em;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    input, textarea {
+      padding: 15px;
+      font-size: 1.1em;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      transition: border-color 0.3s;
+    }
+
+    input:focus, textarea:focus {
+      border-color: #d62828;
+      outline: none;
+    }
+
     button {
       background: #d62828;
       color: white;
-      padding: 12px;
+      padding: 14px;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
+      font-size: 1.1em;
       font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s ease, transform 0.1s ease;
     }
+
     button:hover {
       background: #a61f1f;
+      transform: scale(1.02);
+    }
+
+    @media (max-width: 768px) {
+      .content {
+        padding: 25px 20px;
+        margin: 30px 15px;
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+
+      input, textarea {
+        font-size: 1em;
+      }
+
+      button {
+        font-size: 1em;
+      }
     }
   </style>
 </head>
@@ -46,14 +125,14 @@
     <h1>Kontakt</h1>
     <p>Zde můžeš posílat své návrhy, nabídky na spolupráci a v budoucnu i hlášení chyb ze hry.</p>
 
-    <form method="POST" action="https://formspree.io/f/mpwpveoo"> <!-- změň URL až budeš mít svůj Formspree -->
+    <form method="POST" action="https://formspree.io/f/mpwpveoo">
       <input type="text" name="name" placeholder="Tvé jméno" required>
       <input type="email" name="email" placeholder="Tvůj e-mail" required>
       <textarea name="message" rows="6" placeholder="Zpráva / návrh / bug / spolupráce" required></textarea>
       <button type="submit">Odeslat</button>
     </form>
 
-    <p>Nebo piš rovnou na e-mail: <strong>studio112interactive@outlook.com</strong></p>
+    <p>Preferuješ přímý kontakt? Napiš na e-mail: <strong>studio112interactive@outlook.com</strong></p>
   </div>
 </body>
 </html>
