--- a/links.html
+++ b/links.html
@@ -4,11 +4,69 @@
   <meta charset="UTF-8">
   <title>Odkazy | Dispatch Simulator: Czechia</title>
   <style>
-    body { font-family: Arial; background: #f3f3f3; margin: 0; padding: 0; text-align: center; }
-    nav { background: #d62828; padding: 15px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .content { padding: 50px; max-width: 800px; margin: auto; }
-    h1 { font-size: 2.2em; margin-bottom: 10px; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f3f3f3;
+      margin: 0;
+      padding: 0;
+      color: #222;
+    }
+
+    nav {
+      background: #d62828;
+      padding: 15px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1em;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #ffd166;
+    }
+
+    .content {
+      max-width: 800px;
+      margin: 60px auto;
+      padding: 40px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.4em;
+      color: #d62828;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #555;
+    }
+
+    @media (max-width: 768px) {
+      .content {
+        padding: 25px 20px;
+        margin: 30px 15px;
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+
+      p {
+        font-size: 1.1em;
+      }
+    }
   </style>
 </head>
 <body>
@@ -20,10 +78,10 @@
     <a href="contact.html">Kontakt</a>
     <a href="links.html">Odkazy</a>
   </nav>
+
   <div class="content">
     <h1>Odkazy</h1>
-    <p><strong>Coming soon...</strong></p>
+    <p><strong>Coming soon!</strong> Již brzy zde najdeš odkazy na komunitu, oficiální profily, stránky ke stažení nebo užitečné externí zdroje.</p>
   </div>
 </body>
 </html>
-
