--- a/about.html
+++ b/about.html
@@ -1,48 +1,90 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>O hře | Dispatch Simulator: Czechia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
+    :root {
+      --primary: #d62828;
+      --accent: #f77f00;
+      --bg: #f4f4f4;
+      --text: #1a1a1a;
+      --white: #ffffff;
+      --shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+
+    body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
-      color: #222;
+      background-color: var(--bg);
+      color: var(--text);
+      display: flex;
+      min-height: 100vh;
+    }
+
+    aside {
+      background-color: var(--primary);
+      width: 240px;
+      min-height: 100vh;
+      padding: 20px;
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: var(--shadow);
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 30px;
+      filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.2));
     }
 
     nav {
-      background-color: #d62828;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      width: 100%;
     }
 
     nav a {
       color: white;
-      margin: 0 15px;
       text-decoration: none;
-      font-weight: bold;
       font-size: 1.1em;
-      transition: color 0.3s ease;
+      font-weight: bold;
+      padding: 10px 20px;
+      transition: background 0.3s;
+      border-radius: 8px;
     }
 
     nav a:hover {
-      color: #ffd166;
+      background-color: var(--accent);
+    }
+
+    main {
+      margin-left: 240px;
+      padding: 60px 40px;
+      flex: 1;
     }
 
     .content {
-      background: white;
+      background: var(--white);
       max-width: 900px;
-      margin: 50px auto;
+      margin: 0 auto;
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: var(--shadow);
     }
 
     h1 {
       text-align: center;
-      color: #d62828;
+      color: var(--primary);
       font-size: 2.5em;
       margin-bottom: 20px;
     }
@@ -58,9 +100,28 @@
     }
 
     @media (max-width: 768px) {
-      .content {
-        padding: 20px;
-        margin: 20px;
+      aside {
+        width: 100%;
+        height: auto;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10px 20px;
+        position: relative;
+      }
+
+      .logo {
+        width: 80px;
+        margin: 0;
+      }
+
+      nav {
+        flex-direction: row;
+        gap: 10px;
+      }
+
+      main {
+        margin-left: 0;
+        padding: 40px 20px;
       }
 
       h1 {
@@ -74,31 +135,35 @@
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Domů</a>
-    <a href="about.html">O hře</a>
-    <a href="development.html">Vývoj</a>
-    <a href="download.html">Ke stažení</a>
-    <a href="contact.html">Kontakt</a>
-    <a href="links.html">Odkazy</a>
-  </nav>
+  <aside>
+    <img src="logo.png-removebg-preview.png" alt="Logo" class="logo" />
+    <nav>
+      <a href="index.html">Domů</a>
+      <a href="about.html">O hře</a>
+      <a href="development.html">Vývoj</a>
+      <a href="download.html">Ke stažení</a>
+      <a href="contact.html">Kontakt</a>
+      <a href="links.html">Odkazy</a>
+    </nav>
+  </aside>
 
-  <div class="content">
-    <h1>O hře</h1>
-    <p><strong>Dispatch Simulator: Czechia</strong> bude real-time simulační hra, ve které se hráč ujme role operátora tísňové linky 112. 
-    V rámci své funkce bude řídit a koordinovat všechny složky integrovaného záchranného systému – Hasičský záchranný sbor, Zdravotnickou záchrannou službu, Policii ČR a další specializované jednotky jako např. horskou službu.</p>
+  <main>
+    <div class="content">
+      <h1>O hře</h1>
+      <p><strong>Dispatch Simulator: Czechia</strong> bude real-time simulační hra, ve které se hráč ujme role operátora tísňové linky 112. V rámci své funkce bude řídit a koordinovat všechny složky integrovaného záchranného systému – Hasičský záchranný sbor, Zdravotnickou záchrannou službu, Policii ČR a další specializované jednotky jako např. horskou službu.</p>
 
-    <p>Hráč bude budovat stanice, pořizovat zásahová vozidla, najímat a školit personál. Rozmístění jednotek na mapě ovlivní typy a četnost událostí, které budou generovány náhodně v reálném čase.</p>
+      <p>Hráč bude budovat stanice, pořizovat zásahová vozidla, najímat a školit personál. Rozmístění jednotek na mapě ovlivní typy a četnost událostí, které budou generovány náhodně v reálném čase.</p>
 
-    <p>Každá událost bude začínat simulovaným telefonátem – formou textového chatu. Volající popíše situaci, na kterou hráč bude moci reagovat vlastními otázkami a rozhodnutími. Odpovědi volajícího bude řídit AI, která se přizpůsobí stylu komunikace a vyhodnotí závažnost situace.</p>
+      <p>Každá událost bude začínat simulovaným telefonátem – formou textového chatu. Volající popíše situaci, na kterou hráč bude moci reagovat vlastními otázkami a rozhodnutími. Odpovědi volajícího bude řídit AI, která se přizpůsobí stylu komunikace a vyhodnotí závažnost situace.</p>
 
-    <p>Po rozhodnutí operátora dojde k výjezdu jednotek na místo zásahu. Systém AI následně posoudí, zda bylo nasazení odpovídající – pokud například hráč vyšle málo policistů nebo špatně vybavenou posádku, situace se může zkomplikovat, například napadením jednotek nebo dalšími zraněními. Zkušenost a výcvik personálu budou klíčové pro úspěšné zvládnutí zásahů.</p>
+      <p>Po rozhodnutí operátora dojde k výjezdu jednotek na místo zásahu. Systém AI následně posoudí, zda bylo nasazení odpovídající – pokud například hráč vyšle málo policistů nebo špatně vybavenou posádku, situace se může zkomplikovat, například napadením jednotek nebo dalšími zraněními. Zkušenost a výcvik personálu budou klíčové pro úspěšné zvládnutí zásahů.</p>
 
-    <p>Hra nabídne možnost zrychlit čas, když je klid, a zpomalit ho během kritických momentů. Dlouhodobým cílem bude budování efektivní záchranné sítě a zvládání co největšího počtu incidentů v co nejkratším čase s minimálními následky.</p>
+      <p>Hra nabídne možnost zrychlit čas, když je klid, a zpomalit ho během kritických momentů. Dlouhodobým cílem bude budování efektivní záchranné sítě a zvládání co největšího počtu incidentů v co nejkratším čase s minimálními následky.</p>
 
-    <p><em>Tento popis představuje předběžný návrh herních mechanismů. Hra je v rané fázi vývoje a veškeré funkce, rozhraní i hratelnost se mohou v budoucnu měnit a vyvíjet.</em></p>
+      <p><em>Tento popis představuje předběžný návrh herních mechanismů. Hra je v rané fázi vývoje a veškeré funkce, rozhraní i hratelnost se mohou v budoucnu měnit a vyvíjet.</em></p>
 
-    <p><em>Více informací přineseme postupně v dalších fázích vývoje. Sledujte sekci Vývoj pro aktuální novinky!</em></p>
-  </div>
+      <p><em>Více informací přineseme postupně v dalších fázích vývoje. Sledujte sekci Vývoj pro aktuální novinky!</em></p>
+    </div>
+  </main>
 </body>
 </html>
